# NeuralNetwork

./: CMakeLists.txt  main.cpp  neural_network.cpp  neural_network.h  types.h  utilities.cpp  utilities.h
layers/: activation.cpp  activation.h  attention.cpp  attention.h  convolution.cpp  convolution.h  dense.cpp  dense.h  dropout.cpp  dropout.h  embedding.cpp  embedding.h  flatten.cpp  flatten.h  layers.h  max_pool.cpp  max_pool.h  normalize.cpp  normalize.h  projection.cpp  projection.h  res_add.cpp  res_add.h
llm/: core.cpp  core.h  test.cpp  test.h
mnist/: mnist.cpp  mnist.h
test/: mnist.cpp  mnist.h
